// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with edit mode 1`] = `
<span
  className="icon-button"
  onClick={[Function]}
>
  <svg
    data-testid="close-icon"
    fill="none"
    height="20"
    viewBox="0 0 20 20"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      fill="#D95151"
      height="20"
      rx="10"
      width="20"
    />
    <path
      clipRule="evenodd"
      d="M5.19995 6.07226L9.1277 10L5.19995 13.9278L6.0722 14.8L9.99995 10.8723L13.9277 14.8L14.8 13.9278L10.8722 10L14.8 6.07226L13.9277 5.20001L9.99995 9.12776L6.0722 5.20001L5.19995 6.07226Z"
      fill="#F7F7F7"
      fillRule="evenodd"
    />
  </svg>
</span>
`;

exports[`renders correctly without edit mode 1`] = `
<span
  className="icon-button"
  onClick={[Function]}
>
  <svg
    data-testid="edit-icon"
    fill="none"
    height="20"
    viewBox="0 0 20 20"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M13.3425 2.59069C14.0259 1.90727 15.134 1.90727 15.8174 2.59069L17.5282 4.30147C18.2116 4.98489 18.2116 6.09293 17.5282 6.77635L6.19018 18.1143C6.04953 18.255 5.85876 18.334 5.65985 18.334L2.53485 18.334C2.12064 18.334 1.78485 17.9982 1.78485 17.584L1.78485 14.459C1.78485 14.2601 1.86387 14.0693 2.00452 13.9287L13.3425 2.59069ZM14.7567 3.65135C14.6591 3.55372 14.5008 3.55372 14.4032 3.65135L3.28485 14.7697L3.28485 16.834L5.34919 16.834L16.4675 5.71569C16.5651 5.61806 16.5651 5.45977 16.4675 5.36213L14.7567 3.65135Z"
      fill="#82B284"
      fillRule="evenodd"
    />
    <path
      clipRule="evenodd"
      d="M5.79322 17.1555L2.96479 14.3271L4.02545 13.2664L6.85388 16.0949L5.79322 17.1555Z"
      fill="#82B284"
      fillRule="evenodd"
    />
    <path
      clipRule="evenodd"
      d="M14.9856 7.96312L12.1572 5.1347L13.2178 4.07404L16.0463 6.90246L14.9856 7.96312Z"
      fill="#82B284"
      fillRule="evenodd"
    />
  </svg>
</span>
`;
